# GCP_VM_Deployer

./: .gitignore  README.md  access.py  database.py  databaseconfig.py  dep1.py  dep1_newversion.sh  deploy_instance.py  deploy_instance_test.py  deployedHistory  error  functions.py  mdep.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  student_data.py  test  test.py  undeployed
deployable/: __init__.py  access.py  deploy_instance.py  deploy_instance_test.py  local_data.py  student_data.py  version.py
deployable/data/: test_file.txt
src/deployable/: database.py  deploy_instance.py  local_data.py
test/: test_deploy_instance.py
tests/: __init__.py  context.py  deploy_instance_test.py  test_deploy_instance.py
v1/: access.py  database.py  deploy_instance.py  student_data.py
