[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "deployable"
version = "0.0.1"
description = "Auto Deployment Tool using Google Cloud API"
readme = "README.md"
authors = [
    {name = "Quang Hieu Le", email = "hanle.cs23@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "google_api_python_client==2.81.0",
    "oauth2client==4.1.3",
    "requests==2.28.2",
    "setuptools==65.5.0",
]
license = {text = "MIT"}
requires-python = ">=3.11"
[project.urls]
Downloads = "https://github.com/York-University-SCS/Deployable"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"


[tool.pdm]
