[metadata]
name = deployable-hanle23
version = 0.0.1
author = Quang Hieu Le
author_email = hanle.cs23@gmail.com
description = Auto Deployment Tool using Google Cloud API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hanle23/Deployable
project_urls = 
    Bug Tracker = https://github.com/hanle23/Deployable/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
# Following Google's Deployment Status which as:
# 'Development Status :: 3 - Alpha'
# 'Development Status :: 4 - Beta'
# 'Development Status :: 5 - Production/Stable'
release_status = "Development Status :: 3 - Alpha"

[options]
backage_dir = 
    = src
packages = find:
google_api_python_client >= 2.28.0
oauth2client >= 4.1.3
cachetools==5.2.0
certifi==2022.5.18.1
charset-normalizer==2.0.12
google-api-core==2.8.1
google-api-python-client==2.50.0
google-auth==2.7.0
google-auth-httplib2==0.1.0
googleapis-common-protos==1.56.2
httplib2==0.20.4
idna==3.3
oauth2client==4.1.3
protobuf==3.20.1
pyasn1==0.4.8
pyasn1-modules==0.2.8
pyparsing==3.0.9
requests==2.27.1
rsa==4.8
six==1.16.0
uritemplate==4.1.1
urllib3==1.26.9

[options.packages.find]
where = src